src/test/ui/methods/method-ambig-two-traits-from-impls2.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/method-ambig-two-traits-from-impls2.rs:15:5
   |
LL |     AB::foo();
   |     ^^^^^^^ multiple `foo` found
   |
note: candidates defined here:
  --> $DIR/method-ambig-two-traits-from-impls2.rs:7:5
   |
LL |     fn foo() {}
   |     ^^^^^^^^ candidate #1 is defined in an impl of the trait `A` for the type `AB`
...
LL |     fn foo() {}
   |     ^^^^^^^^ candidate #2 is defined in an impl of the trait `B` for the type `AB`
help: disambiguate the method call for candidate #1
   |
LL |     A::foo();
   |     ^^^^^^
help: disambiguate the method call for candidate #2
   |
LL |     B::foo();
   |     ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
